--- a/src/main/resources/com/amay/scu/sles/ag.fxml
+++ b/src/main/resources/com/amay/scu/sles/ag.fxml
@@ -7,18 +7,18 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
-<Button fx:id="ag" layoutX="100.0" layoutY="100.0" prefHeight="80" prefWidth="80" styleClass="tom" stylesheets="@../css/sles.css"
+<Button fx:id="ag" layoutX="100.0" layoutY="100.0"  styleClass="ag" stylesheets="@../css/sles.css"
         xmlns="http://javafx.com/javafx"
         xmlns:fx="http://javafx.com/fxml"
-        fx:controller="com.amay.scu.controller.EFOController"
+        fx:controller="com.amay.scu.controller.AGController"
 >
     <graphic>
         <VBox alignment="CENTER">
-            <ImageView fitHeight="50" fitWidth="50">
-                <image>
-                    <Image url="@../images/efo.png"/>
-                </image>
-            </ImageView>
+<!--            <ImageView fitHeight="50" fitWidth="50">-->
+<!--                <image>-->
+<!--                    <Image url="@../images/efo.png"/>-->
+<!--                </image>-->
+<!--            </ImageView>-->
             <Label fx:id="name" text="AG" stylesheets="@../css/sle-name.css" />
         </VBox>
     </graphic>
