--- a/src/main/resources/com/amay/scu/scu-view.fxml
+++ b/src/main/resources/com/amay/scu/scu-view.fxml
@@ -5,12 +5,11 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:id="scu" stylesheets="@css/application.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.amay.scu.controller.SCUController">
+<AnchorPane fx:id="scu" stylesheets="@css/application.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.amay.scu.controller.SCUController">
 
     <BorderPane fx:id="borderPane" stylesheets="@css/border-pane.css">
         <top>
-            <VBox fx:id="topVBox" BorderPane.alignment="TOP_CENTER">
-            </VBox>
+            <fx:include fx:id="topHeaderInclude" source="header/top-header-view.fxml" />
         </top>
 <!--        <left>-->
 <!--            <VBox fx:id="leftVBox"  BorderPane.alignment="CENTER_LEFT">-->
@@ -21,28 +20,13 @@
             </VBox>
         </right>
 
-<!--        <top>-->
-<!--            <VBox fx:id="topVBox" alignment="CENTER" prefHeight="100.0" prefWidth="100.0" BorderPane.alignment="CENTER">-->
-<!--                <Label fx:id="text" text="Welcome to SCU!" />-->
-<!--                <Button onAction="#onConnect" text="Connect" />-->
-<!--                <Button onAction="#onDisconnect" text="Disconnect" />-->
-<!--                <Button onAction="#onSend" text="Send" />-->
-
-<!--            </VBox>-->
-<!--        </top>-->
-
       <center>
-<!--          <VBox fx:id="centerVBox" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">-->
               <fx:include source="station_map/station-dynamic-map-view.fxml" />
-<!--          </VBox>-->
       </center>
         <bottom>
             <VBox fx:id="bottomVBox" BorderPane.alignment="BOTTOM_CENTER">
             </VBox>
         </bottom>
-      <padding>
-         <Insets bottom="10.0" left="20.0" right="10.0" top="10.0" />
-      </padding>
 
     </BorderPane>
 </AnchorPane>
